# rover-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  OdroidC2.md  README.md  api.http  api.serial.http  conanfile.txt  methodNotFound.http  rover.properties
core-utils/event-manager/: CMakeLists.txt
core-utils/event-manager/example/: CMakeLists.txt
core-utils/logging/: CMakeLists.txt
core-utils/logging/example/: CMakeLists.txt
incubator/: CMakeLists.txt  CMakeLists_linux.txt  settings.json
incubator/resources/: settings.json
incubator/resources_manager/: CMakeLists.txt
incubator/resources_manager/src/: resource_files_manager.cpp.template  resource_files_manager.h
incubator/src/: Application.cpp  Application.h  BaseService.cpp  BaseService.h  Config.h  Kernel.cpp  Kernel.h  Module.h  ModuleRegistry.cpp  ModuleRegistry.h  Properties.h  Protocol.cpp  Protocol.h  Registry.h  Scheduler.cpp  Scheduler.h  Service.h  main.cpp
incubator/src/event/: EventManager.h
incubator/src/exception/: LogicException.h
incubator/src/http/: FieldsAlloc.h  HttpServer.cpp  HttpServer.h  HttpWorker.cpp  HttpWorker.h
incubator/src/logging/: DevNullLogger.h  Logger.h  LoggingService.cpp  LoggingService.h  SystemLogger.cpp  SystemLogger.h
incubator/src/module/: Multicast.h  MulticastMessage.h  RegistryService.cpp  RegistryService.h  Transport.h
incubator/src/net/: BoostMulticast.cpp  BoostMulticast.h  BoostMulticastFactory.cpp  BoostMulticastFactory.h  BoostMulticastMessage.h
incubator/src/properties/: HttpProperties.h  LoggingProperties.h  NetworkProperties.h  Properties.h  PropertiesContainer.cpp  PropertiesContainer.h  PropertiesJson.cpp  PropertiesJson.h  SerialProperties.h
incubator/src/resources/: ResourceManager.h  ResourceManager_apple.cpp  ResourceManager_linux.cpp.template
incubator/src/scheduler/: Scheduler.cpp  Scheduler.h
incubator/src/serial/: BoostSerialPort.cpp  BoostSerialPort.h  SerialPortManager_win.cpp  SerialService.cpp  SerialService.h
incubator/src/subsystem/: Application.h  Logger.cpp  Logger.h
incubator/src/support/: Order.h
incubator/www/: .env  .yarnrc  package.json
incubator/www/src/: App.js  App.scss  fontAwesome.js  index.js  varables.scss
mqtt/: .gitignore  CMakeLists.txt  README.md  protocol.puml
mqtt/example/: CMakeLists.txt
mqtt/example/src/: main.cpp
mqtt/src/mqtt/: Client.h  Command.h  Component.h  Connection.cpp  Connection.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  Factory.cpp  Factory.h  Library.cpp  Library.h  Properties.cpp  Properties.h  Publisher.h  Reader.h  Subscriber.h  Timer.cpp  Timer.h  TopicFilter.cpp  TopicFilter.h  UserStd.h  Writer.h
mqtt/testsuite/: CMakeLists.txt
mqtt/testsuite/src/: DecoderFixture.cpp  DecoderFixture.h  EncoderFixture.cpp  EncoderFixture.h  ReaderFixture.cpp  ReaderFixture.h  TopicFilterFixture.cpp  TopicFilterFixture.h  WriterFixture.cpp  WriterFixture.h
platform/: CMakeLists.txt  conanfile.txt
platform-io/lib/zeromq/: CMakeLists.txt  library.json
platform/src/: Logger.h  SysInfo.cpp  SysInfo.h  config.h
platform/src/json/: Interfaces.h  JsonBase.cpp  JsonBase.h
platform/src/platform-mac-os/: CpuInfo.c  CpuInfo.h
platform/src/plugin/: Module.cpp  Module.h  ModuleBase.cpp  ModuleBase.h  Plugin.cpp  Plugin.h
platform/src/rpc/: RpcMethod.h  RpcRegistry.h
platform/src/stream/: Reader.h  Writer.h
platform/testsuite/: CMakeLists.txt
platform/testsuite/src/: JsonBaseTest.cpp  JsonBaseTest.h  PlatformTestSuite.cpp
plugins/system/: CMakeLists.txt
plugins/system/src/: SysInfo.cpp  SysInfo.h  SystemModule.cpp  SystemModule.h  config.h  dllEntry.cpp  main.cpp
plugins/system/testsuite/: CMakeLists.txt
service/: CMakeLists.txt  service.properties  settings.json
service/resources/: CMakeLists.txt  settings.json
service/resources/src/: resource_files_manager.cpp.template  resource_files_manager.h
service/src/: Application.cpp  Application.h  BarcodeReaderService.cpp  BarcodeReaderService.h  BaseService.h  InfoService.cpp  InfoService.h  JoystickService.cpp  JoystickService.h  MainApplication.cpp  MainApplication.h  Properties.h  Registry.h  Server.cpp  Server.h  Service.h  const.h  main.cpp
service/src/context/: Context.h
service/src/event/: ApplicationEvent.h  Event.h  EventManager.h  EventManagerService.h
service/src/exception/: LogicException.h
service/src/grpc/: GreeterService.h  GrpcService.cpp  GrpcService.h
service/src/handlers/: Factory.cpp  Factory.h  HandlerJsonRpc.cpp  HandlerJsonRpc.h  JsonRpcHandler.cpp  JsonRpcHandler.h  Ping.cpp  Ping.h  Route.h  ServletRequestHandler.cpp  ServletRequestHandler.h
service/src/http/: HttpServer.cpp  HttpServer.h  HttpWorker.cpp  HttpWorker.h  JsonRpcHandler.h
service/src/joystick/: JoystickEvent.cpp  JoystickEvent.h  JoystickService.cpp  JoystickService.h
service/src/logging/: LoggingService.cpp  LoggingService.h
service/src/module/: RegistryService.cpp  RegistryService.h  Transport.h
service/src/mqtt/: MqttService.cpp  MqttService.h
service/src/net/: BoostMulticast.h  BoostMulticastFactory.h  BoostMulticastMessage.cpp  BoostMulticastMessage.h
service/src/properties/: GrpcProperties.h  HttpProperties.h  JoystickProperties.h  LoggingProperties.h  MqttProperties.h  NetworkProperties.h  Properties.h  PropertiesContainer.cpp  PropertiesJson.cpp  PropertiesJson.h  PropertiesMap.cpp  PropertiesMap.h  SerialProperties.h
service/src/rpc/: HealthRpcSupplier.cpp  HealthRpcSupplier.h
service/src/scheduler/: Scheduler.h  SchedulerService.h
service/src/serial/: BoostSerialPort.cpp  Protocol.cpp  Protocol.h  SerialEvent.h  SerialManager.cpp  SerialManager.h  SerialPortInfo.h  SerialPortManager.h  SerialPortManager_linux.cpp  SerialPortManager_osx.cpp  SerialRpc.h  SerialService.cpp  SerialService.h
service/src/stream/: BoostInputStream.h
service/src/subsystem/: Application.cpp  Application.h  Logger.cpp  Logger.h  LoggerSubsystem.cpp  LoggerSubsystem.h  PluginManager.cpp  PluginManager.h  (+4 more)
service/testsuite/: CMakeLists.txt
service/www/: CMakeLists.txt  openrpc.json  package-lock.json  package.json
(+388 files in other folders)
